# fieldtrust

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  test.yml
docs/: DECISIONS.md  DEMO_DATA.md  LIVE_MODE.md  PERF.md  PLAN.md  PLAN_v2.md
python/: README.md  pyproject.toml
python/examples/: demo.py
python/fieldtrust/: __init__.py  alignment.py  calibrate.py  json_spans.py
scripts/: build.js  capture-demo.js
src/: app.js  core.js  demo.js  fixtures.js  index.template.html  lens.js  review.js  shared.js  store.js  ui.css  ui.js  workspace.js
tests/: conftest.py  test_core.js  test_python.py
